--- a/Areas/Admin/Views/KindOfProduct/Index.cshtml
+++ b/Areas/Admin/Views/KindOfProduct/Index.cshtml
@@ -8,7 +8,7 @@
     </div>
 </div>
 
-<div class="card-body p-4">
+<div class="card-body my-4">
     <div class="row pt-3">
         <div class="col-12 text-end">
             <a asp-controller="KindOfProduct" asp-action="Create" class="btn btn-primary"><i class="bi bi-journal-plus p-2"></i>Nový typ měřáku</a>
