--- a/Areas/Admin/Views/Product/Create.cshtml
+++ b/Areas/Admin/Views/Product/Create.cshtml
@@ -8,7 +8,7 @@
     </div>
 </div>
 
-<div class="card-body p-4">
+<div class="card-body my-4">
     <form method="post" class="row">
         <div class="border pb-3">
             @*<div asp-validation-summary="ModelOnly"></div>*@
@@ -23,7 +23,21 @@
                 <span asp-validation-for="DisplayProductNr" class="text-danger"></span>
             </div>
             <div class="form-floating py-2 col-12">
-                <input asp-for="Description" class="form-control border-0 shadow">
+                <select asp-for="CategoryId" asp-items="ViewBag.CategoryList" class="form-select border-0 shadow">
+                    <option disabled selected>Vyber kategorii měřidla</option>
+                </select>
+                <label asp-for="CategoryId" class="ms-2"></label>
+                <span asp-validation-for="CategoryId" class="text-danger"></span>
+            </div>
+            <div class="form-floating py-2 col-12">
+                <select asp-for="KindOfProductId" asp-items="ViewBag.KindOfProductList" class="form-select border-0 shadow">
+                    <option disabled selected>Vyber typ měřidla</option>
+                </select>
+                <label asp-for="KindOfProductId" class="ms-2"></label>
+                <span asp-validation-for="KindOfProductId" class="text-danger"></span>
+            </div>
+        <div class="form-floating py-2 col-12">
+                <textarea asp-for="Description" class="form-control border-0 shadow"></textarea>
                 <label asp-for="Description" class="ms-2"></label>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
