--- a/Areas/Admin/Views/KindOfProduct/Create.cshtml
+++ b/Areas/Admin/Views/KindOfProduct/Create.cshtml
@@ -8,7 +8,7 @@
     </div>
 </div>
 
-<div class="card-body p-4">
+<div class="card-body my-4">
     <form method="post" class="row">
 
         <div class="border pb-3">
