--- a/Areas/Admin/Views/KindOfProduct/Edit.cshtml
+++ b/Areas/Admin/Views/KindOfProduct/Edit.cshtml
@@ -7,7 +7,7 @@
         </div>
     </div>
 </div>
-<div class="card-body p-4">
+<div class="card-body my-4">
     <form method="post">
         <input asp-for="Id" hidden />
         <div class="border pb-3">
