--- a/Areas/Admin/Views/Product/Edit.cshtml
+++ b/Areas/Admin/Views/Product/Edit.cshtml
@@ -7,7 +7,7 @@
         </div>
     </div>
 </div>
-<div class="card-body p-4">
+<div class="card-body my-4">
     <form method="post">
         <input asp-for="Id" hidden />
         <div class="border pb-3">
@@ -25,7 +25,7 @@
             </div>
             
             <div class="form-floating py-2 col-12">
-                <input asp-for="Description" class="form-control border-0 shadow" />
+                <textarea asp-for="Description" class="form-control border-0 shadow"></textarea>
                 <label asp-for="Description" class="ms-2"></label>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
