--- a/Areas/Admin/Views/Product/Create.cshtml
+++ b/Areas/Admin/Views/Product/Create.cshtml
@@ -3,13 +3,13 @@
 <div class="class shadow border-0 mt-4">
     <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
         <div class="col-12 text-center">
-            <h2 class="text-white py-2">Nový Měřák</h2>
+            <h2 class="text-white py-2">Nový měřák - zadání</h2>
         </div>
     </div>
 </div>
 
 <div class="card-body my-4">
-    <form method="post" class="row">
+    <form method="post" class="row" enctype="multipart/form-data">
         <div class="border pb-3">
             @*<div asp-validation-summary="ModelOnly"></div>*@
             <div class="form-floating py-2 col-12">
@@ -36,10 +36,14 @@
                 <label asp-for="KindOfProductId" class="ms-2"></label>
                 <span asp-validation-for="KindOfProductId" class="text-danger"></span>
             </div>
-        <div class="form-floating py-2 col-12">
+            <div class="form-floating py-2 col-12">
                 <textarea asp-for="Description" class="form-control border-0 shadow"></textarea>
                 <label asp-for="Description" class="ms-2"></label>
                 <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-floating py-2 col-12">
+                <input type="file" class="form-control border-0 shadow">
+                <label asp-for="ImageUrl" class="ms-2"></label>
             </div>
             <div class="row pt-2 text-center">
                 <div class="col-6 col-mb-3">
