--- a/Areas/Admin/Views/Product/Index.cshtml
+++ b/Areas/Admin/Views/Product/Index.cshtml
@@ -11,10 +11,10 @@
 <div class="card-body my-4">
     <div class="row pt-3">
         <div class="col-12 text-end">
-            <a asp-controller="Product" asp-action="Create" class="btn btn-primary"><i class="bi bi-journal-plus p-2"></i>Nový produkt</a>
+            <a asp-controller="Product" asp-action="Upsert" class="btn btn-primary"><i class="bi bi-journal-plus p-2"></i>Nový produkt</a>
         </div>
     </div>
-    <table class="table table-bordered table-striped text-center">
+    <table id="tblData" class="table table-bordered table-striped text-center" style="width: 100%">
         <thead>
         <tr>
             <th class="text-start">
@@ -26,31 +26,15 @@
             <th>Kategorie měřidla</th> @*bude doplněno*@
             <th>Typ měřidla</th> @*bude doplněno*@
             <th>
-                 Popis měřáku        
+                Popis měřáku        
             </th>
         </tr>
         </thead>
-        <tbody>
-        @foreach (var obj in Model.OrderBy(u => u.DisplayProductNr))
-        {
-            <tr>
-                <td class="text-start">@obj.NameOfProduct</td>
-                <td>@obj.DisplayProductNr</td>
-                <td>@obj.CategoryId</td> @*bude doplněno*@
-                <td>@obj.KindOfProductId</td> @*bude doplněno*@
-                <td>@obj.Description</td>
-                <td class="text-end">
-                    <div class="w-75 btn-group" role="group">
-
-                        <a asp-controller="Product" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-outline-primary mx-2"><i class="bi bi-pen-fill"> Edituj</i></a>
-
-                        <a asp-controller="Product" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2"><i class="bi bi-trash"> Smaž</i></a>
-
-                    </div>
-                </td>
-                @*<td></td>*@
-            </tr>
-        }
-        </tbody>
+        
     </table>
 </div>
+
+@section Scripts
+{
+    <script src="~/js/product.js"></script>
+}
