V08 - tlačítko editujV07 - pro uložení

--- a/Areas/Admin/Views/Product/Index.cshtml
+++ b/Areas/Admin/Views/Product/Index.cshtml
@@ -28,6 +28,9 @@
             <th>
                 Popis měřáku        
             </th>
+                <th>
+                    akce
+                </th>
         </tr>
         </thead>
         
