V10migrace na nový NTB

--- a/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/Areas/Admin/Views/Product/Upsert.cshtml
@@ -49,7 +49,7 @@
                         <input type="file" name="file" class="form-control border-0 shadow">
                         <label asp-for="Product.ImageUrl" class="ms-2"></label>
                     </div>
-                    <div class="row pt-2 text-center">
+                    <div class="row pt-2 text-center mb-5">
                         <div class="col-6 col-mb-3">
                             @if (Model.Product.Id != 0)
                             {
@@ -78,7 +78,7 @@
     <script>
         tinymce.init({
             selector: 'textarea',
-            plugins: 'anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount checklist mediaembed casechange export formatpainter pageembed linkchecker a11ychecker tinymcespellchecker permanentpen powerpaste advtable advcode editimage tinycomments tableofcontents footnotes mergetags autocorrect typography inlinecss',
+            // plugins: 'anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount checklist mediaembed casechange export formatpainter pageembed linkchecker a11ychecker tinymcespellchecker permanentpen powerpaste advtable advcode editimage tinycomments tableofcontents footnotes mergetags autocorrect typography inlinecss',
             toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table mergetags | addcomment showcomments | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent | emoticons charmap | removeformat',
             tinycomments_mode: 'embedded',
             tinycomments_author: 'Author name',
