--- a/Areas/Admin/Views/Product/Index.cshtml
+++ b/Areas/Admin/Views/Product/Index.cshtml
@@ -10,7 +10,7 @@
 
 <div class="card-body my-4">
     <div class="row pt-3">
-        <div class="col-12 text-end">
+        <div class="col-12 text-end my-2">
             <a asp-controller="Product" asp-action="Upsert" class="btn btn-primary"><i class="bi bi-journal-plus p-2"></i>Nový produkt</a>
         </div>
     </div>
