V13 - po přidání poli do profilu uživatele, nicméně nefunkční

--- a/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using DaPeWeb
 @using DaPe.Models
 @using DaPe.Models.ViewModels
+@using DaPe.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
