--- a/Areas/Customer/Views/_ViewImports.cshtml
+++ b/Areas/Customer/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using DaPeWeb
 @using DaPe.Models
+@using DaPe.Utility
 @using DaPe.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
