--- a/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using DaPe.Utility
+@using DaPe.Models
+@using DaPe.Models.ViewModels
 @using DaPeWeb.Areas.Identity
 @using DaPeWeb.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
