--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,64 +1,108 @@
 ﻿@page
 @model RegisterModel
-@{
-    ViewData["Title"] = "Register";
-}
 
-<h1>@ViewData["Title"]</h1>
-
-<div class="row">
-    <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
-            <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email">Email</label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+<div class="card shadow border-0 mt-4">
+    <div class="card-header bg-secondary ml-0 py-4">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2 class="py-2 text-white"> Registrace</h2>
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.Password">Password</label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.ConfirmPassword">Confirm Password</label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-        </form>
+        </div>
     </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+</div>
+<div class="card-body pt-4">
+    <div class="row pt-4">
+        <div class="col-md-12">
+            <form id="registerForm" class="row" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+                <h3 class="border-bottom pb-3 mb-4 text-secondary text-center">Vytvořit nový účet.</h3>
+                <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+                <div class="col-md-12 form-floating mb-3">
+                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                    <label asp-for="Input.Email" class="ms-2 text-muted">Email</label>
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                </div>
+                <div class="col-md-6 form-floating mb-3">
+                    <input asp-for="Input.Name" class="form-control" placeholder="Jméno" />
+                    <label asp-for="Input.Name" class="ms-2 text-muted">Jméno</label>
+                    <span asp-validation-for="Input.Name" class="text-danger"></span>
+                </div>
+                <div class="col-md-6 form-floating mb-3">
+                    <input asp-for="Input.Phone" class="form-control" placeholder="Telefon" />
+                    <label asp-for="Input.Phone" class="ms-2 text-muted">Telefon</label>
+                    <span asp-validation-for="Input.Phone" class="text-danger"></span>
+                </div>
+                <div class="col-md-6 form-floating mb-3">
+                    <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
+                    <label asp-for="Input.Password" class="ms-2 text-muted">Heslo</label>
+                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                </div>
+                <div class="col-md-6 form-floating mb-3">
+                    <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
+                    <label asp-for="Input.ConfirmPassword" class="ms-2 text-muted">Potvrď heslo</label>
+                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                </div>
+                <div class="col-md-6 form-floating mb-3">
+                    <input asp-for="Input.StreetAddress" class="form-control"  placeholder="Ulice" />
+                    <label asp-for="Input.StreetAddress" class="ms-2 text-muted">Ulice</label>
+                    <span asp-validation-for="Input.StreetAddress" class="text-danger"></span>
+                </div>
+                <div class="col-md-6 form-floating mb-3">
+                    <input asp-for="Input.City" class="form-control" placeholder="Město" />
+                    <label asp-for="Input.City" class="ms-2 text-muted">Město</label>
+                    <span asp-validation-for="Input.City" class="text-danger"></span>
+                </div>
+                <div class="col-md-6 form-floating mb-3">
+                    <input asp-for="Input.PostalCode" class="form-control" placeholder="PSČ" />
+                    <label asp-for="Input.PostalCode" class="ms-2 text-muted">PSČ</label>
+                    <span asp-validation-for="Input.PostalCode" class="text-danger"></span>
+                </div>
+                <div class="col-md-6 form-floating mb-3">
+                    <input asp-for="Input.State" class="form-control" placeholder="Stát" />
+                    <label asp-for="Input.State" class="ms-2 text-muted">Stát</label>
+                    <span asp-validation-for="Input.State" class="text-danger"></span>
+                </div>
+
+                <div class="col-md-6 form-floating mb-3">
+                    <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-select"><option disabled selected>- Vyber roli - </option></select>
+                </div>
+                <div class="col-12">
+                    <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Registruj se</button>
+                </div>
+            </form>
+        </div>
+        <div class="col-md-12">
+            <section>
+                <p class="divider-text d-flex pt-3"> or </p>
+                <h3>Use another service to register.</h3>
+                @{
+                    if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                    {
                         <div>
                             <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
+                                There are no external authentication services configured. See this
+                                <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
+                                    article
+                                    about setting up this ASP.NET application to support logging in via external services
+                                </a>.
                             </p>
                         </div>
-                    </form>
+                    }
+                    else
+                    {
+                        <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                            <div>
+                                <p>
+                                    @foreach (var provider in Model.ExternalLogins!)
+                                    {
+                                        <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                    }
+                                </p>
+                            </div>
+                        </form>
+                    }
                 }
-            }
-        </section>
+            </section>
+        </div>
     </div>
 </div>
 
