--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using DaPeWeb
 @using DaPe.Models
 @using DaPe.Models.ViewModels
+@using DaPe.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
