--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        @if (User.IsInRole(SD.Role_Admin)){
+                        @* @if (User.IsInRole(SD.Role_Admin)){ *@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Správa obsahu
@@ -45,9 +45,13 @@
                                 <li class="nav-item">
                                     <a class="dropdown-item" asp-area="Admin" asp-controller="KindOfProduct" asp-action="Index">Typy měřáků</a>
                                 </li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li class="nav-item">
+                                        <a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">Společnost</a>
+                                    </li>
                             </ul>
                             </li>
-                        }
+                       @*  } *@
                     </ul>
                     <partial name="_LoginPartial"/>
                 </div>
