--- a/Areas/Admin/Views/Category/Index.cshtml
+++ b/Areas/Admin/Views/Category/Index.cshtml
@@ -10,7 +10,7 @@
 
 <div class="card-body p-4">
         <div class="row pt-3">
-        <div class="col-12 text-end">
+        <div class="col-12 text-end my-2">
                 <a asp-controller="Category" asp-action="Create" class="btn btn-primary"><i class="bi bi-journal-plus p-2"></i>Nová kategorie</a>
             </div>
         </div>
